--- a/index.html
+++ b/index.html
@@ -39,10 +39,21 @@
           <section id="hero">
             <span class="white">
               <img id="header" src="images/workstation.jpg" alt="workstation">
-              <img id="logo" src="images/logo.png" alt="logo">
+              <div class="container">
+                <div class="row">
+                  <div class="one-third column">
+                  <img src="images/space.png">
+                  </div>
+                  <div class="one-third column">
+                  <img id="logo" src="images/logo.png" alt="logo">
+                  </div>
+                  <div class="one-third column">
+                  <button class="button-primary"id="log-in"><span class="black">Log In</span></button>
+                  </div>
+                </div>
+              </div>
               <h1>Collaboration. Anytime, Anywhere.</h1>
-              <button id="log-in">Log In</button>
-              <button id="sign-up">Sign Up</button>
+              <button id="sign-up"><span class="white">Sign Up</span></button>
               <h5>What is Jottly?</h5>
               <img id="arrow" src="images/arrow.png">
             </span>
@@ -115,7 +126,9 @@
                 <input class="u-full-width" type="email" placeholder="Your Email" id="exampleEmailInput">
               </div>  
               <div class="one-third column">
-                <button>Get Started</button>
+                <span class="black">
+                <button class="button-primary">Get Started</button>
+                </span>
               </div>  
             </div>    
           </div> 
@@ -123,7 +136,7 @@
         </section>
             
         <section id="footer">
-          <span class="white">
+          <span class="black">
           <div class="container">
            <div class ="row">
             <div class="one-third column">
@@ -133,7 +146,7 @@
               <a href="url">TERMS</a>
             </div>
             <div class="one-third column">
-              <IMG id="footer-logo"SRC="images/logo.png">
+              <IMG id="footer-logo"SRC="images/footer-logo.png">
             </div>
             <div class="one-third column">    
               <p>©2015 JOTT.LY ALL RIGHTS RESERVED</p>
