--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
                   <img id="logo" src="images/logo.png" alt="logo">
                   </div>
                   <div class="one-third column">
-                  <button class="button-primary"id="log-in"><span class="black">Log In</span></button>
+                  <button onclick="myFunction()" class="button-primary"id="log-in"><span class="black">Log In</span></button>
                   </div>
                 </div>
               </div>
               <h1>Collaboration. Anytime, Anywhere.</h1>
-              <button id="sign-up"><span class="white">Sign Up</span></button>
+              <button onclick="myFunction()" id="sign-up"><span class="white">Sign Up</span></button>
               <h5>What is Jottly?</h5>
               <img id="arrow" src="images/arrow.png">
             </span>
@@ -127,7 +127,7 @@
               </div>  
               <div class="one-third column">
                 <span class="black">
-                <button class="button-primary">Get Started</button>
+                <button onclick="myFunction()" class="button-primary">Get Started</button>
                 </span>
               </div>  
             </div>    
@@ -155,6 +155,12 @@
           </div> 
           </span>  
         </section>
+
+<script>
+function myFunction() {
+    alert("Welcome to the Club!");
+}
+</script>
 
 
 <!-- End Document
