--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               </div>
               <div class="row">
                 <div class="one-third column">
-                  <img src="images/Dan.png">
+                  <img src="images/dan.png">
                   <p>“Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.”</p>
                   <h5>Dan P, Author</h5>
                 </div> 
