Updated the top hero unit for Jottly. Go take a peek

--- a/index.html
+++ b/index.html
@@ -35,21 +35,16 @@
 
 <body>
 
-            <!-- This is where our content starts -->
+        <!-- This is where our content starts -->
           <section id="hero">
             <span class="white">
               <img id="header" src="images/workstation.jpg" alt="workstation">
               <div class="container">
                 <div class="row">
-                  <div class="one-third column">
-                  <img src="images/space.png">
+                  <div class="navlogo">
+                    <img id="logo" src="images/logo.png" alt="logo">
                   </div>
-                  <div class="one-third column">
-                  <img id="logo" src="images/logo.png" alt="logo">
-                  </div>
-                  <div class="one-third column">
-                  <button onclick="myFunction()" class="button-primary"id="log-in"><span class="black">Log In</span></button>
-                  </div>
+                  <button onclick="myFunction()" class="button-primary pull-right" id="log-in"><span class="black">Log In</span></button>
                 </div>
               </div>
               <h1>Collaboration. Anytime, Anywhere.</h1>
