Updated CTA form for review

--- a/index.html
+++ b/index.html
@@ -95,11 +95,7 @@
               </div>
               <div class="row">
                 <div class="one-third column">
-<<<<<<< HEAD
-                  <img src="images/Dan.png">
-=======
                   <img src="images/dan.png">
->>>>>>> gh-pages
                   <p>“Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.”</p>
                   <h5>Dan P, Author</h5>
                 </div> 
@@ -123,22 +119,15 @@
           <div class="container">
             <div class="row">
               <div class="one-third column">
-                <h2>Try it Yourself!</h2>
-                <p>Sign up for a free trial today!</p>
+                <h2 class="mini-margin">Try it Yourself!</h2>
+                <p class="mini-margin">Sign up for a free trial today!</p>
               </div>  
-              <div class="one-third column">
-                <input class="u-full-width" type="email" placeholder="Your Email" id="exampleEmailInput">
-              </div>  
-              <div class="one-third column">
-<<<<<<< HEAD
-                <span class="black">
-                <button onclick="myFunction()" class="button-primary">Get Started</button>
-                </span>
-=======
-                
-                <button onclick="myFunction()" class="button-primary"><span class="black">Get Started<span class="black"></button>
-                
->>>>>>> gh-pages
+              <div class="two-thirds column">
+                <form class="form-cta">
+                  <input class="input-cta" type="email" placeholder="Your Email" id="exampleEmailInput">
+
+                  <button onclick="myFunction()" class="button-primary submit-cta"><span class="black">Get Started<span class="black"></button>
+                </form>
               </div>  
             </div>    
           </div> 
